refactor: encapsulate deck access in Table class to maintain encapsulation